hmulti_audio.media_addon: stop the output thread on BTimedEventQueue::B_STOP

fix #15263

Change-Id: Icd305668365067a89f3f952465bfe2aef84e8d0e
Reviewed-on: https://review.haiku-os.org/c/haiku/+/2045
Reviewed-by: waddlesplash <waddlesplash@gmail.com>